[workspace]
members = [
  "crates/dna_util",
  "crates/fixt",
  "crates/fixt/test",
  "crates/hdk",
  "crates/hdk_derive",
  "crates/aingle_hash",

  "crates/hc",
  "crates/aingle",
  "crates/aingle_cascade",
  "crates/aingle_conductor_api",
  "crates/aingle_lmdb",
  "crates/aingle_p2p",
  "crates/aingle_keystore",
  "crates/aingle_state",
  "crates/aingle_types",
  "crates/aingle_websocket",
  "crates/aingle_zome_types",

  "crates/kitsune_p2p/kitsune_p2p",
  "crates/kitsune_p2p/transport_quic",
  "crates/kitsune_p2p/types",
  "crates/kitsune_p2p/proxy",

  "crates/test_utils/wasm",
  "crates/test_utils/wasm_common",
]

exclude = [

]

# These are the default params for RELEASE target
# Setting these for all dependencies... we'll only debug our own code
[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[patch.crates-io]

rkv = { git = "https://github.com/Daironode/rkv.git", branch = "master" }
lmdb-rkv = { git = "https://github.com/Daironode/lmdb-rs.git" }
tokio_safe = { git = "https://github.com/Daironode/tokio_safe.git", branch = "master" }