[package]
name = "adk"
version = "0.0.1"
description = "The AIngle ADK"
license = "Apache-2.0"
homepage = "https://github.com/AIngleLab/aingle/tree/develop/crates/adk"
documentation = "https://docs.rs/adk/"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "adk" ]
categories = [ "cryptography" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[features]
default = []
mock = ["adk_derive/mock", "mockall"]
test_utils = [ "aingle_zome_types/test_utils" ]

[dependencies]
adk_derive = { version = "^0.0.1", path = "../adk_derive" }
ai_hash = { version = "0.0.1", path = "../ai_hash" }
aingle_wasmer_guest = "0.0.1"
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
paste = "=1.0.5"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "1.0.22"
tracing = "0.1"
tracing-core = "0.1"
mockall = { version = "0.9", optional = true }

[dependencies.tracing-subscriber]
version = "0.2"
features = []

[dev-dependencies]
fixt = { path = "../fixt" }
