[package]
name = "adk_derive"
version = "0.0.1"
description = "derive macros for the aingle adk"
license = "Apache-2.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "adk" ]
categories = [ "cryptography" ]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
paste = "=1.0.5"
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }

[features]
default = []
mock = []
