[package]
name = "aingle_cli"
version = "0.0.1-dev.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2018"

[[bin]]
name = "ai"
path = "src/bin/ai.rs"

[lib]
name = "aingle_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
aingle_cli_bundle = { path = "../ai_bundle", version = "0.0.1" }
aingle_cli_sandbox = { path = "../ai_sandbox", version = "0.0.1-dev.0" }
observability = "0.1.3"
structopt = "0.3"
tokio = { version = "1.3", features = [ "full" ] }
