[package]
name = "aingle_cli_bundle"
version = "0.0.1"
description = "SAF and hApp bundling functionality for the `ai` AIngle CLI utility"
license = "Apache-2.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2018"

[[bin]]
name = "ai-app"
path = "src/bin/ai-app.rs"

[[bin]]
name = "ai-saf"
path = "src/bin/ai-saf.rs"

[dependencies]
anyhow = "1.0"
aingle_util = { path = "../aingle_util", features = ["backtrace"], version = "0.0.1" }
aingle_middleware_bytes = "=0.0.3"
aingle_types = { version = "0.0.1", path = "../aingle_types" }
mr_bundle = {version = "0.0.1", path = "../mr_bundle"}
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
serde_yaml = "0.8"
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = { version = "1.3", features = [ "full" ] }

[dev-dependencies]
assert_cmd = "1.0"
matches = "0.1"
predicates = "1.0"
tempdir = "0.3"
