[package]
name = "aingle"
version = "0.0.100"
description = "AIngle, a framework for distributed applications"
license-file = "LICENSE_CAL-1.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

[dependencies]
anyhow = "1.0.26"
async-trait = "0.1"
base64 = "0.13"
byteorder = "1.3.4"
cfg-if = "0.1"
chrono = "0.4.6"
derive_more = "0.99.3"
directories = "2.0.2"
either = "1.5.0"
fallible-iterator = "0.2.0"
fixt = { version = "^0.0.1", path = "../fixt" }
futures = "0.3.1"
ghost_actor = "0.3.0-alpha.1"
ai_hash = { version = "^0.0.1", path = "../ai_hash", features = ["full"] }
aingle_cascade = { version = "0.0.1", path = "../aingle_cascade" }
aingle_conductor_api = { version = "0.0.1", path = "../aingle_conductor_api" }
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_sqlite = { version = "0.0.1", path = "../aingle_sqlite" }
aingle_middleware_bytes = "=0.0.3"
aingle_state = { version = "0.0.1", path = "../aingle_state" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_wasmer_host = "0.0.1"
aingle_websocket = { version = "0.0.1", path = "../aingle_websocket" }
aingle_zome_types = { version = "^0.0.1", path = "../aingle_zome_types" }
human-panic = "1.0.3"
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { version = "0.0.1", path = "../kitsune_p2p/types" }
lazy_static = "1.4.0"
mockall = "0.8"
mr_bundle = { version = "0.0.1", path = "../mr_bundle" }
must_future = "0.1.1"
nanoid = "0.3"
num_cpus = "1.8"
observability = "0.1.3"
once_cell = "1.4.1"
parking_lot = "0.10"
predicates = "1.0.4"
rand = "0.7"
ring = "0.16"
rusqlite = { version = "0.25" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
serde_yaml = "0.8"
shrinkwraprs = "0.3.0"
structopt = "0.3.11"
strum = "0.18.0"
tempdir = "0.3.7"
thiserror = "1.0.22"
tokio = { version = "1.3", features = [ "full" ] }
tokio-stream = "0.1"
aingle_util = { version = "0.0.1", path = "../aingle_util" }
toml = "0.5.6"
tracing = "=0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
url = "1.7.2"
url2 = "0.0.6"
url_serde = "0.2.0"
uuid = { version = "0.7", features = [ "serde", "v4" ] }
xsalsa20poly1305 = "0.6.0"

# Dependencies for test_utils: keep in sync with below
aingle_wasm_test_utils = { version = "0.0.1", path = "../test_utils/wasm", optional = true }
adk = { version = "0.0.1", path = "../adk", optional = true }
matches = {version = "0.1.8", optional = true }
aingle_test_wasm_common = { version = "0.0.1", path = "../test_utils/wasm_common", optional = true  }
unwrap_to = { version = "0.1.0", optional = true }
itertools = { version = "0.10", optional = true }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.3.0"


[dev-dependencies]
anyhow = "1.0.26"
assert_cmd = "1.0.1"
criterion = "0.3"
maplit = "1"
pretty_assertions = "0.6.1"
serial_test = "0.4.0"
test-case = "1.0.0"

# Dependencies for test_utils: keep in sync with above
aingle_wasm_test_utils = { version = "0.0.1", path = "../test_utils/wasm", optional = false }
adk = { version = "0.0.1", path = "../adk", optional = false }
matches = {version = "0.1.8", optional = false }
aingle_test_wasm_common = { version = "0.0.1", path = "../test_utils/wasm_common", optional = false  }
unwrap_to = { version = "0.1.0", optional = false }


[[bench]]
name = "bench"
harness = false

[[bench]]
name = "consistency"
harness = false

[lib]
name = "aingle"
path = "src/lib.rs"

[[bin]]
name = "aingle"
path = "src/bin/aingle/main.rs"

[features]
default = ["slow_tests", "test_utils", "only_check_wasms", "no-deps"]

# Exposes additional functionality only needed for integration tests.
# This feature should be turned off for production builds.
test_utils = [
  "adk",
  "aingle_sqlite/test_utils",
  "aingle_state/test_utils",
  "aingle_types/test_utils",
  "aingle_zome_types/test_utils",
  "kitsune_p2p_types/test_utils",
  "itertools",
  "matches",
  "aingle_test_wasm_common",
  "unwrap_to"
]

# Wasm ribosome tests take > 60 seconds - let's only run them in CI
slow_tests = []

# Includes the wasm build script, which we don't need when not building wasms
build_wasms = ['aingle_wasm_test_utils/build']
only_check_wasms = ['aingle_wasm_test_utils/only_check']

# Enables at-rest encryption of the SQLite database.
# Incompatible with "no-deps".
db-encryption = ['aingle_sqlite/db-encryption']

# Compile SQLite from source rather than depending on a library.
# Incompatible with "db-encryption"
no-deps = ['aingle_sqlite/no-deps']
