[package]
name = "aingle_cascade"
version = "0.0.1"
description = "Logic for cascading updates to AIngle state and network interaction"
license = "CAL-1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

[dependencies]
derive_more = "0.99.3"
either = "1.5"
fallible-iterator = "0.2"
fixt = { version = "0.0.1", path = "../fixt" }
futures = "0.3"
ghost_actor = "0.3.0-alpha.1"
hdk = { version = "0.0.1", path = "../hdk" }
hdk_derive = { version = "0.0.1", path = "../hdk_derive" }
aingle_hash = { version = "0.0.1", path = "../aingle_hash", features = ["full"] }
aingle_lmdb = { version = "0.0.1", path = "../aingle_lmdb" }
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_middleware_bytes = "=0.0.3"
aingle_state = { version = "0.0.1", path = "../aingle_state" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
tokio = { version = "0.2", features = [ "full" ] }
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
