[package]
name = "aingle_conductor_api"
version = "0.0.1"
description = "Message types for AIngle admin and app interface protocols"
license = "CAL-1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

[dependencies]
directories = "2.0.2"
derive_more = "0.99.3"
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
aingle_hash = { version = "0.0.1", path = "../aingle_hash", features = ["full"] }
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_state = { version = "0.0.1", path = "../aingle_state" }
aingle_middleware_bytes = "=0.0.3"
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
serde = { version = "1.0.104", features = [ "derive" ] }
serde_derive = "1.0.104"
serde_yaml = "0.8"
structopt = "0.3"
tracing = "=0.1.21"
thiserror = "1.0.22"
url2 = "0.0.6"

[dev-dependencies]
matches = {version = "0.1.8"}
observability = "0.1.3"
