[package]
name = "aingle_keystore"
version = "0.0.1"
description = "keystore for libsodium keypairs"
license-file = "LICENSE_CAL-1.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "nacl", "libsodium", "cryptography" ]
categories = [ "cryptography" ]
edition = "2018"

[dependencies]
ghost_actor = "0.3.0-alpha.1"
ai_hash = { version = "^0.0.1", path = "../ai_hash", features = ["full"] }
aingle_middleware_bytes = "=0.0.3"
aingle_zome_types = { path = "../aingle_zome_types", version = "0.0.1" }
lair_keystore_api = "=0.0.1-alpha.12"
lair_keystore_client = "=0.0.1-alpha.12"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
thiserror = "1.0.22"
tokio = { version = "1.3", features = [ "full" ] }
tracing = "0.1"
