[package]
name = "aingle_p2p"
version = "0.0.1"
description = "aingle specific wrapper around more generic p2p module"
license = "CAL-1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "semantic", "p2p", "dgd", "networking" ]
categories = [ "network-programming" ]
edition = "2018"

[dependencies]
async-trait = "0.1"
fixt = { path = "../fixt" }
futures = "0.3"
ghost_actor = "0.3.0-alpha.1"
aingle_hash = { version = "0.0.1", path = "../aingle_hash" }
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_middleware_bytes = "=0.0.3"
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { version = "0.0.1", path = "../kitsune_p2p/types" }
mockall = "0.8.1"
observability = "0.1.3" 
serde = { version = "1.0.104", features = [ "derive" ] }
serde_bytes = "0.11"
thiserror = "1.0.22"
tokio = { version = "0.2", features = [ "full" ] }
tokio_safe_block_on = "0.1.2"
