[package]
name = "aingle_p2p"
version = "0.0.1"
description = "aingle specific wrapper around more generic p2p module"
license-file = "LICENSE_CAL-1.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "p2p", "sgd", "networking" ]
categories = [ "network-programming" ]
edition = "2018"

[dependencies]
async-trait = "0.1"
fixt = { path = "../fixt", version = "0.0.1" }
futures = "0.3"
ghost_actor = "0.3.0-alpha.1"
ai_hash = { version = "^0.0.1", path = "../ai_hash" }
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_middleware_bytes = "=0.0.3"
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = "^0.0.1", path = "../aingle_zome_types" }
kitsune_p2p = { version = "0.0.1", path = "../kitsune_p2p/kitsune_p2p" }
kitsune_p2p_types = { version = "0.0.1", path = "../kitsune_p2p/types" }
mockall = "0.8.1"
observability = "0.1.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_bytes = "0.11"
thiserror = "1.0.22"
tokio = { version = "1.3", features = [ "full" ] }
tokio-stream = "0.1"
aingle_util = { version = "0.0.1", path = "../aingle_util" }
