[package]
name = "aingle_state"
version = "0.0.1"
description = "TODO minimize deps"
license = "CAL-1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
chrono = "0.4.6"
derive_more = "0.99.3"
aingle_lmdb = { version = "0.0.1", path = "../aingle_lmdb" }
aingle_hash = { version = "0.0.1", path = "../aingle_hash", features = ["full"] }
fallible-iterator = "0.2.0"
serde = { version = "1.0.104", features = [ "derive" ] }
tracing = "=0.1.21"
tracing-futures = "0.2.4"
aingle_keystore = { version = "0.0.1", path = "../aingle_keystore" }
aingle_middleware_bytes = "=0.0.3"
aingle_p2p = { version = "0.0.1", path = "../aingle_p2p" }
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_wasm_test_utils = { path = "../test_utils/wasm", optional = true }
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
mockall = "0.8"
shrinkwraprs = "0.3.0"
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
thiserror = "1.0.22"
tokio = { version = "0.2.11", features = [ "full" ] }
tokio_safe_block_on = "0.1.2"

[dev-dependencies]
anyhow = "1.0.26"
fixt = { version = "0.0.1", path = "../fixt" }
hdk = { version = "0.0.1", path = "../hdk" }
aingle_wasm_test_utils = { path = "../test_utils/wasm" }
matches = "0.1.8"
observability = "0.1.3"
pretty_assertions = "0.6.1"

[features]
default = ["test_utils"]

test_utils = [
    "aingle_types/test_utils",
    "aingle_zome_types/test_utils",
    "aingle_wasm_test_utils",
]