[package]
name = "aingle_websocket"
version = "0.0.1"
description = "AIngle utilities for serving and connection with websockets"
license-file = "LICENSE_CAL-1.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

[dependencies]
futures = "0.3"
ghost_actor = "0.4.0-alpha.5"
aingle_middleware_bytes = "=0.0.3"
nanoid = "0.3"
net2 = "0.2"
must_future = "0.1"
serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11"
stream-cancel = "0.8.0"
thiserror = "1.0.22"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-tungstenite = { version = "0.13", features = [ "tls" ] }
tracing = "0.1"
tracing-futures = "0.2"
tungstenite = "0.12"
url2 = "0.0.6"

[dev-dependencies]
aingle_types = { version = "=0.0.1", path = "../aingle_types" }
linefeed = "0.6"
unwrap_to = "0.1.0"
observability = "0.1.3"
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false
