[package]
name = "aingle_zome_types"
version = "0.0.1"
description = "AIngle zome types"
license = "CAL-1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
readme = "README.md"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aingle_hash = { path = "../aingle_hash" }
aingle_middleware_bytes = "=0.0.3"
paste = "=1.0.3"
chrono = "0.4.6"
serde = { version = "1.0.104", features = [ "derive" ] }
serde_bytes = "0.11"
subtle = "2"
thiserror = "1.0.22"
tracing = "0.1"

# fixturator dependencies
fixt = { path = "../fixt", optional = true }
strum = { version = "0.18.0", optional = true }
rand = {version = "0.7", optional = true}

[features]
default = ["fixturators", "test_utils"]

fixturators = ["fixt", "rand", "strum", "aingle_hash/fixturators", ]

test_utils = ["aingle_hash/hashing"]
