[package]
name = "diagnostics"
version = "0.1.0"
authors = [ "Carlos Tovar", "carlos.tovar@blockinnovation.center"]
edition = "2018"

[workspace]

[dependencies]
anyhow = "1.0"
fallible-iterator = "0.2"

aingle = { path = "../aingle" }
aingle_keystore = { path = "../aingle_keystore" }
aingle_lmdb = { path = "../aingle_lmdb" }
aingle_types = { path = "../aingle_types" }

rkv = "0.10.4"
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ] }


[patch.crates-io]

rkv = { git = "https://github.com/Daironode/rkv.git", branch = "master" }
lmdb-rkv = { git = "https://github.com/Daironode/lmdb-rs.git" }
