[package]
name = "dna_util"
version = "0.0.1"
description = "AIngle DnaFile Utility."
license = "Apache-2.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "semantic" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2018"

[dependencies]
aingle_hash = { version = "0.0.1", path = "../aingle_hash" }
aingle = { path = "../aingle", default-features = false }
aingle_middleware_bytes = "=0.0.3"
aingle_types = { version = "0.0.1", path = "../aingle_types" }
aingle_zome_types = { version = "0.0.1", path = "../aingle_zome_types" }
serde = { version = "1.0.104", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
structopt = "0.3.11"
thiserror = "1.0.22"
tokio = { version = "0.2", features = [ "full" ] }

[dev-dependencies]
tempdir = "0.3.7"
