[package]
name = "aingle_hc"
version = "0.1.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "semantic" ]
categories = [ "command-line-utilities", "development-tools::build-utils", "filesystem" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hc"
path = "src/bin/hc.rs"

[lib]
name = "aingle_hc"
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12"
futures = "0.3"
aingle_conductor_api = { path = "../aingle_conductor_api" }
aingle_types = { path = "../aingle_types" }
aingle_websocket = { path = "../aingle_websocket" }
aingle_p2p = { path = "../aingle_p2p" }
serde_yaml = "0.8"
tokio = { version = "0.2.11", features = [ "full" ] }
structopt = "0.3"
anyhow = "1.0"
tracing = "0.1"
url2 = "0.0.6"
portpicker = "0.1.0"
nanoid = "0.3"
# unwrap_to = { version = "0.1.0", optional = false }
observability = "0.1.3"
lazy_static = "1.4.0"
chrono = "0.4.6"
walkdir = "2"

[dev-dependencies]
assert_cmd = "1.0.1"
matches = "0.1"