[package]
name = "hdk_derive"
version = "0.0.1"
description = "derive macros for third iteration of the aingle hdk"
license = "Apache-2.0"
homepage = "https://github.com/Daironode/aingle"
documentation = "https://github.com/Daironode/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "semantic", "hdk" ]
categories = [ "cryptography" ]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
paste = "=1.0.3"
aingle_zome_types = { path = "../aingle_zome_types" }
