[package]
name = "fixt_test"
version = "0.0.1"
description = "tests the fixturator macros in an external crate"
license = "Apache-2.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "test", "fixture" ]
categories = [ "fixtures" ]
edition = "2018"

[dependencies]
fixt = { path = ".." }
paste = "1.0.5"
