[package]
name = "kitsune_p2p_mdns"
version = "0.0.1"
description = "p2p / mdns discovery framework"
license = "Apache-2.0"
homepage = "https://github.com/AIngleLab/aingle"
documentation = "https://github.com/AIngleLab/aingle"
authors = [ "AIngle Core Dev Team <devcore@aingle.ai>" ]
keywords = [ "aingle", "ai", "p2p", "mdns", "networking" ]
categories = [ "network-programming" ]
edition = "2018"

[[example]]
name = "broadcast"
path = "examples/broadcast.rs"

[[example]]
name = "discover"
path = "examples/discover.rs"

[dependencies]
libmdns = "=0.6.0"
mdns = "=3.0.0"
futures-util = "0.3.1"
futures-core = "0.3.1"
async-stream = "0.2.0"
base64 = "0.13"
err-derive = "0.2.1"
tokio = { version = "1.3", features = [ "full" ] }
tokio-stream = { version = "0.1" }
