[package]
name = "aingle_wasm_test_utils"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "aingle_wasm_test_utils"
crate-type = [ "cdylib", "rlib" ]
path = "./src/lib.rs"

[features]
default = []
build = []
only_check = []


[dependencies]
fixt = { path = "../../fixt" }
ai_hash = { path = "../../ai_hash" }
aingle_types = { path = "../../aingle_types" }
aingle_zome_types = { path = "../../aingle_zome_types" }
rand = "0.7"
strum = "0.18.0"
strum_macros = "0.18.0"
aingle_util = { version = "0.0.1", path = "../../aingle_util" }

[build-dependencies]
toml = "0.5"
walkdir = "2.3.1"
