[package]
name = "aingle_test_wasm_common"
version = "0.0.1"
authors = [ "Carlos Tovar", "carlos.tovar@blockinnovation.center" ]
edition = "2018"

[lib]
name = "aingle_test_wasm_common"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[dependencies]
aingle_middleware_bytes = "=0.0.3"
serde = "=1.0.123"
serde_bytes = "0.11"
hdk = { path = "../../hdk" }
