[workspace]
members = [
    "agent_info",
    "anchor",
    "bench",
    "capability",
    "create_entry",
    "crd",
    "crud",
    "debug",
    "emit_signal",
    "entry_defs",
    "hash_entry",
    "foo",
    "genesis_self_check_invalid",
    "genesis_self_check_valid",
    "hash_path",
    "adk_extern",
    "init_fail",
    "init_pass",
    "link",
    "migrate_agent_fail",
    "migrate_agent_pass",
    "multiple_calls",
    "post_commit_fail",
    "post_commit_success",
    "query",
    "random_bytes",
    "x_salsa20_poly1305",
    "ser_regression",
    "sign",
    "sys_time",
    "update_entry",
    "validate",
    "validate_invalid",
    "validate_link",
    "validate_link_add_invalid",
    "validate_link_add_valid",
    "validate_valid",
    "validation_package_fail",
    "validation_package_success",
    "whoami",
    "zome_info",
]

[profile.release]
opt-level = "z"


[patch.crates-io]
# aingle_wasmer_common = { git = "https://github.com/AIngleLab/aingle-wasmer.git", branch = "master" }
# aingle_wasmer_guest = { git = "https://github.com/AIngleLab/aingle-wasmer.git", branch = "master" }
# aingle_wasmer_host = { path = "../../../../../aingle-wasmer/crates/host" }
# aingle_wasmer_host = { git = "https://github.com/AIngleLab/aingle-wasmer.git", branch = "master" }
# aingle_middleware_bytes = { git = "https://github.com/AIngleLab/aingle-serialization.git", branch = "master" }
# aingle_middleware_bytes_derive = { git = "https://github.com/AIngleLab/aingle-serialization.git", branch = "master" }
