[package]
name = "test_wasm_agent_info"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_agent_info"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
adk = { path = "../../../../adk" }
serde = "1.0"

[dev-dependencies]
fixt = { path = "../../../../fixt" }

[features]
default = []
mock = ["adk/mock"]