[package]
name = "test_wasm_anchor"
version = "0.0.1"
authors = [ "Carlos Tovar", "carlos.tovar@blockinnovation.center" ]
edition = "2018"

[lib]
name = "test_wasm_anchor"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = { path = "../../../../hdk" }
serde = "=1.0.104"
aingle_test_wasm_common = { version = "=0.0.1", path = "../../../wasm_common" }
