[package]
name = "test_wasm_bench"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_bench"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
adk = { path = "../../../../adk" }
serde = "1.0"

[features]
default = []
mock = ["adk/mock"]