[package]
name = "test_wasm_create_entry"
version = "0.0.1"
authors = [ "Carlos Tovar", "carlos.tovar@blockinnovation.center" ]
edition = "2018"

[lib]
name = "test_wasm_create_entry"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.104"
aingle_test_wasm_common = { version = "=0.0.1", path = "../../../wasm_common" }
hdk = { path = "../../../../hdk" }
